2022-09-15  KAWANO Toshihiko  <kawano@lanl.gov>

	* tools/decemf15.cpp: new file
	DeCE tool for making MF12 and MF15 for fission gamma production

2022-03-20  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/decemod6.cpp (DeceBoundCorrect): updated
	boundcorrect didn't work when TAB1 and LIST in MF6 have different energy boundaries,
	which is probably not allowed

2022-03-17  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/deceangdist.cpp (readADdata): updated
	* source/deceread.cpp (readCSdata) (readISdata): updated
	skip data reading when data ofset is not determined automatically

2022-03-08  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/deceprocgroup.cpp (DeceGroupAverage): updated
	check if MF/MT=1/452 is given by polynomials, then skip processing

2021-07-27  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/decetable1.cpp (DeceTableMF1MT460): new function
	print delayed photon data

2021-07-19  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/endflib.cpp (ENDFScanLibrary): modified
	* source/deceheader.cpp (DeceShowHeaders): modified
	no header print when partial data are given

2021-07-15  KAWANO Toshihiko  <kawano@lanl.gov>

	* tools/deceangdist.cpp (main): updated
	angle step can be provided by command-line option

	* source/decelibread.cpp (DeceLibRead): updated
	message print for verb mode added

2021-06-30  Toshihiko Kawano  <kawano@lanl.gov>

	* source/groupstructure.h: updated
	* source/deceprocgroup.cpp (DeceGenerateGroup): modified
	LANL 618 group structure added as group ID = 4

2021-05-10  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/gfr.cpp (gfrPrintCrossSection): modified
	accept XYdataConversion global options

	* source/deceprocgroup.cpp (DeceGenerateGroup): modified
	group ID = -1 stands for arbitrary group structure from external file
	* source/deceprocgroup.cpp (DeceReadGroup): new function
	read group structure from external file

2021-05-04  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/coupling.cpp (clebsh_gordan): new function